--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 ================================================================================
  Kaster Protocol - Reference Implementation
- Version: v1.0.0
+ Version: v1.0.1
 ================================================================================
 
  DISCLAIMER:
@@ -457,7 +457,7 @@
                     <ul class="legal-forbidden-list">
                         <li data-i18n="demo.age_18">You must be at least 18 years old (or legal majority in your jurisdiction)</li>
                         <li data-i18n="demo.age_content">You understand that content may include mature themes</li>
-                        <li data-i18n="demo.age_blockchain">You understand the permanent nature of blockDAG-stored content</li>
+                        <li data-i18n="demo.age_blockdag">You understand the permanent nature of blockDAG-stored content</li>
                         <li data-i18n="demo.age_responsibility">You accept full responsibility for your participation</li>
                     </ul>
                 </div>
